# tue_simulink_ethercat

./: Build_and_Install_SOEM.m  Build_extra.m  CMakeLists.txt  Make_EtherCAT_Slave_S_functions.m  package.xml  simulink_ethercat_ros.slx
ECAT_Simulink_Lib/: SOEM_EtherCAT_Lib.slx  SOEM_EtherCAT_Lib.slx.r2016a
ECAT_s_functions/: ECAT_Interface.mexa64  ec_EL1008_di.mexa64  ec_EL1018_di.c  ec_EL2004_do.c  ec_EL2008_do.mexa64  ec_EL2502_pwm.mexa64  ec_EL3008_adc.mexa64  ec_EL3102_adc.mexa64  ec_EL4038_dac.mexa64  ec_EL4132_dac.mexa64  ec_EL5101_enc.mexa64  ec_EL5152_enc.mexa64  ec_EL6022_ser.c  ec_EL6022_ser.mexa64  ec_TU0001_combi.c  ec_TU_ES_030.c  ec_TU_ES_030.mexa64  ec_TU_ES_030FRF.mexa64  ec_TU_ES_030old.mexa64
Extra_functions/: slblocks.m
Extra_functions/General/: print_signal.c  print_signal.mexa64  sf_setcpu.h
scripts/: Build_1_and_Install_SOEM.m  Build_2_EtherCAT_Slave_S_functions.m  Build_3_extra.m  Build_all.m
soem/: build_lib
soem/src/: ec.c  ec.h  ec_structdata.h
src/ECAT_Simulink_Lib/: SOEM_EtherCAT_Lib.mdl
src/ECAT_s_functions/: ec_EL1014_di.c  ec_EL2502_pwm.c  ec_EL3008_adc.c  ec_EL3702_adc.c  ec_EL4038_dac.c  ec_EL5101_enc.c  ec_EL5152_enc.c  ec_TU_ES_030FRF.c  ec_TU_ES_030old.c
src/Extra_functions/: delete_ALL_lines.m  init_TUeES030.m  init_doc_block.m  setBlockSize.m
src/Extra_functions/General/: sf_setcpu.c
template/: Ecat_Test_Example.slx  simulink_ethercat_ros.slx
